--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "my_api",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "lint": "eslint .",
+    "lint:fix": "pnpm run lint --fix"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.0",
-    "hono": "^4.7.5"
+    "@hono/zod-openapi": "^0.18.4",
+    "hono": "^4.7.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.11.0",
     "@types/node": "^20.11.17",
+    "eslint": "^9.23.0",
+    "eslint-plugin-format": "^1.0.1",
     "tsx": "^4.7.1"
   }
 }
