--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@hono/node-server": "^1.14.0",
     "@hono/zod-openapi": "^0.18.4",
     "hono": "^4.7.5",
+    "hono-pino": "^0.8.0",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "stoker": "^1.4.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
