--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my_api",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
@@ -9,6 +10,8 @@
   "dependencies": {
     "@hono/node-server": "^1.14.0",
     "@hono/zod-openapi": "^0.18.4",
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1",
     "hono": "^4.7.5",
     "hono-pino": "^0.8.0",
     "pino": "^9.6.0",
