--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy src/app.ts",
+    "start": "node ./dist/src/index.js",
+    "dev:db": "turso dev --db-file dev.db",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint .",
-    "lint:fix": "pnpm run lint --fix"
+    "lint:fix": "npm run lint --fix",
+    "test": "cross-env NODE_ENV=test vitest",
+    "build": "tsc && tsc-alias"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.0",
@@ -24,11 +30,18 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.11.0",
-    "@types/node": "^20.11.17",
-    "drizzle-kit": "^0.30.6",
-    "eslint": "^9.23.0",
-    "eslint-plugin-format": "^1.0.1",
-    "tsx": "^4.7.1"
+    "@antfu/eslint-config": "^3.7.3",
+    "@cloudflare/workers-types": "^4.20250409.0",
+    "@types/node": "^22.7.4",
+    "cross-env": "^7.0.3",
+    "drizzle-kit": "^0.24.2",
+    "eslint": "^9.12.0",
+    "eslint-plugin-format": "^0.1.2",
+    "tsc-alias": "^1.8.10",
+    "tsx": "^4.19.1",
+    "turso": "^0.1.0",
+    "typescript": "^5.6.2",
+    "vitest": "^2.1.2",
+    "wrangler": "^3.80.1"
   }
 }
