--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "my_api",
+  "name": "hono-open-api-starter",
   "type": "module",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy src/app.ts",
+    "deploy": "wrangler deploy --minify",
     "start": "node ./dist/src/index.js",
     "dev:db": "turso dev --db-file dev.db",
     "typecheck": "tsc --noEmit",
@@ -14,24 +15,24 @@
     "build": "tsc && tsc-alias"
   },
   "dependencies": {
-    "@hono/node-server": "^1.14.0",
-    "@hono/zod-openapi": "^0.18.4",
-    "@libsql/client": "^0.15.2",
-    "@scalar/hono-api-reference": "^0.8.0",
-    "dotenv": "^16.4.7",
-    "dotenv-expand": "^12.0.1",
-    "drizzle-orm": "^0.41.0",
-    "drizzle-zod": "^0.7.1",
-    "hono": "^4.7.5",
-    "hono-pino": "^0.8.0",
-    "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0",
-    "stoker": "^1.4.2",
-    "zod": "^3.24.2"
+    "@hono/node-server": "^1.13.1",
+    "@hono/zod-openapi": "^0.16.4",
+    "@libsql/client": "^0.14.0",
+    "@scalar/hono-api-reference": "^0.5.150",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
+    "drizzle-orm": "^0.33.0",
+    "drizzle-zod": "^0.5.1",
+    "hono": "^4.6.3",
+    "hono-pino": "^0.3.0",
+    "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2",
+    "stoker": "^1.0.9",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.7.3",
-    "@cloudflare/workers-types": "^4.20250409.0",
+    "@cloudflare/workers-types": "^4.20241004.0",
     "@types/node": "^22.7.4",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.24.2",
