Readme and license
Signed-off-by: Kunal Singh Dadhwal <kunalsinghdadhwal@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
+# Application
 NODE_ENV=development
 PORT=9999
 LOG_LEVEL=info
-DATABASE_URL=file:./dev.db
-DATABASE_AUTH_TOKEN=
+
+# Database (Turso)
+# Get these from https://turso.tech
+# 1. Create a database: turso db create <name>
+# 2. Get URL: turso db show <name> --url
+# 3. Get token: turso db tokens create <name>
+DATABASE_URL=libsql://your-database.turso.io
+DATABASE_AUTH_TOKEN=your-auth-token
